# qa_guru_hw20

./: pyproject.toml  pytest.ini
data/: items.py
tests/: conftest.py  test_adding_item_to cart.py  utils.py
