[tool.poetry]
name = "qa-guru-hw20"
version = "0.1.0"
description = ""
authors = ["flowerfrog <alexosenn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
allure-pytest = "^2.13.2"
requests = "^2.31.0"
selene = "2.0.0rc4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
